fix: Fix mobile navbar stepper alignment.

--- a/store/src/styles/sections/select-menu.scss
+++ b/store/src/styles/sections/select-menu.scss
@@ -169,7 +169,7 @@
    font-weight: 600;
    font-size: 1.875rem;
    color: rgba(51, 51, 51, 0.8);
-   margin: 2.25rem 0 1.25rem 0;
+   margin: 1.25rem 0 1.25rem 0;
 
    @media (max-width: 768px) {
       font-size: 1.125rem;
